# eventdbx

./: .commitlintrc.json  .gitignore  .prettierrc.json  AGENTS.md  Cargo.toml  Dockerfile  Eventful.md  LICENSE  README.md  build.rs  dist-workspace.toml  package-lock.json  package.json
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: backend_comparison.rs
benchmarks/: Dockerfile  README.md  docker-compose.yml
docs/: CNAME  _config.yml  apis.html  apis.md  cli.html  cli.md  getting-started.html  getting-started.md  index.html  index.md  plugins.md
docs/_layouts/: default.html
docs/assets/: script.js  styles.css
docs/core-concepts/: extensibility.md
docs/design/: surface_split.md
proto/: api.proto  cli.capnp  control.capnp  plugin.capnp  replication.capnp  replication.proto  replication_legacy.capnp  schema.capnp
scripts/: install.js
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  plugin.rs  schema.rs  server.rs  token.rs
src/commands/: aggregate.rs  cli_token.rs  client.rs  cloud.rs  config.rs  conflicts.rs  domain.rs  events.rs  init.rs  list.rs  mod.rs  plugin.rs  queue.rs  remote.rs  schema.rs  schema_version.rs  serve.rs  snapshots.rs  start.rs  system.rs  tenant.rs  token.rs  upgrade.rs  watch.rs
src/lib/: api_grpc.rs  cache.rs  cli_capnp.rs  cli_proxy.rs  cloud.rs  config.rs  conflict.rs  conflict_store.rs  control_capnp.rs  encryption.rs  error.rs  filter.rs  graphql.rs  merkle.rs  mod.rs  observability.rs  plugin_capnp.rs  reference.rs  replication.rs  replication_capnp.rs  replication_capnp_client.rs  replication_legacy_capnp.rs  replication_noise.rs  replication_planner.rs  restrict.rs  run_mode.rs  schema.rs  schema_capnp.rs  schema_history.rs  schema_source.rs  server.rs  service.rs  snowflake.rs  store.rs  tenant.rs  tenant_store.rs  token.rs  validation.rs
src/lib/admin/: mod.rs
src/lib/plugin/: capnp.rs  csv.rs  grpc.rs  http.rs  json.rs  log.rs  mod.rs  postgres.rs  process.rs  queue.rs  registry.rs  sqlite.rs  tcp.rs  util.rs
src/plugin/: csv.rs  mod.rs  postgres.rs  sqlite.rs
src/store/: mod.rs
tests/: admin_api.rs  adminapi_regression.rs  cli_help.rs  cli_smoke.rs  control_regression.rs  graphql_regression.rs  grpc_regression.rs  plugin_regression.rs  replication_regression.rs  rest_regression.rs
wix/: main.wxs
