[package]
name = "eventdbx"
description = "An event-sourced, key-value, write-side database system."
version = "1.5.5"
edition = "2024"
repository = "https://github.com/thachp/eventdbx"
license = "MIT"
keywords = [
  "immutable",
  "events",
  "event-sourcing",
  "event-store",
  "cqrs"
]
categories = ["database"]

[lib]
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rocksdb = { version = "0.21", default-features = false, features = ["multi-threaded-cf"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
flate2 = "1.0"
tar = "0.4"
tempfile = "3.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.21"
tonic = { version = "0.11", features = ["tls", "tls-roots", "transport"] }
prost = "0.12"
tracing-futures = "0.2"
tokio-stream = { version = "0.1", features = ["sync", "net"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
aes-gcm = "0.10"

[dev-dependencies]

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }
